<resources>
    <string name="app_name">CriminalIntent</string>
    <string name="crime_title_hint">Enter a title for the crime.</string>
    <string name="crime_title_label">Title</string>
    <string name="crime_details_label">Details</string>
    <string name="crime_solved_label">Solved</string>
    <string name="subtitle_format">%1$d crimes</string>
    <string name="new_crime">New Crime</string>
    <string name="show_subtitle">show subtitle</string>
    <string name="hide_subtitle">hide subtitle</string>
    <string name="delete_crime">delete</string>
    <string name="crime_suspect_text">Choose Suspect</string>
    <string name="crime_report_text">Send Crime Report</string>
    <string name="crime_report_solved">The case is solved</string>
    <string name="crime_report_unsolved">The case is not solved</string>
    <string name="crime_report_suspect">The suspect is %s.</string>
    <string name="crime_report_no_suspect">There is no suspect</string>
    <string name="crime_report_subject">CriminalIntent Crime Report</string>
    <string name="send_report">send report via:</string>
    <string name="crime_report">%1$s!
        The crime was discovered on %2$s. %3$s, and %4$s</string>
    <string name="take_photo">take photo</string>

    <!--复数字符串，此方法在中文系统环境中不起作用-->
    <plurals name="subtitle_plural">
        <item quantity="one">%1$d crime</item>
        <item quantity="other">%1$d crimes</item>
    </plurals>

</resources>
